# RustFlightPanel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: svg_to_png.bash
config/: airspeed.yaml  attitude_indicator.yaml
src/: main.rs
src/instruments/: airspeed.rs  attitude_indicator.rs  instrument.rs  mod.rs
